# docs/openapi-ntt-usercrud.yaml
@@ -31,7 +31,9 @@ paths:
           content:
             application/json:
               schema:
-                "$ref": "#/components/schemas/User"
+                type: array
+                items:
+                  "$ref": "#/components/schemas/User"
                 description: A Pet in JSON Format
         '404':
           description: No se encuentran usuarios
@@ -66,8 +68,13 @@ paths:
               schema:
                 "$ref": "#/components/schemas/User"
                 description: Un usuario en formato JSON
-        '405':
+        '400':
           description: Invalid input
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Error"
+                description: Mennsaje de error
         default:
           description: Unexpected error
   "/user/{userId}":
@@ -131,8 +138,13 @@ paths:
       responses:
         '201':
           description: Successful operation
-        '405':
+        '400':
           description: Invalid input
+          content:
+            application/json:
+              schema:
+                "$ref": "#/components/schemas/Error"
+                description: Mennsaje de error
         default:
           description: Unexpected error
       security:
@@ -183,6 +195,7 @@ components:
         correo:
           type: string
           format: email
+          pattern: '^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,6}$'
         password:
           type: string
           format: password
@@ -209,7 +222,7 @@ components:
         token:
           type: string
         activo:
-          type: string
+          type: boolean
     Error:
       type: object
       description: mensaje de error
